--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">My Application</string>
+    <string name="email_address_hint">Your email address</string>
+    <string name="your_password_hint">Your password</string>
+    <string name="button_label">Submit</string>
 </resources>
