[+] Loaded images from the network
* Added the Coil dependency
* Updated the compileOptions to Java 8
* Updated the layout to allow the image to fill the entire image view

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
     <string name="app_name">My Application</string>
-    <string name="switch_label">Display olive branch</string>
+    <string name="switch_label">Toggle images</string>
 </resources>
